# thttpd-rs

./: .gitignore  Dockerfile.security  JOURNEY.md  Makefile  README.md  ROADMAP.md  SECURITY.md  deny.toml  requirements-dev.txt
.github/workflows/: fuzz.yml  migration-ci.yml  miri.yml  release.yml  sanitizers.yml  security.yml
.rpiv/artifacts/architecture-reviews/: 2026-06-09_12-21-11_thttpd-rs-workspace.md
.rpiv/artifacts/changelogs/: 2026-06-09_implementation-changes.md
.rpiv/artifacts/designs/: 2026-06-08_15-43-59_thttpd-rust-migration.md  2026-06-09_08-29-38_thttpd-rs-differential-test-fixes.md  2026-06-09_differential-test-fixes.md
.rpiv/artifacts/discover/: 2026-06-08_15-18-22_thttpd-rust-migration.md
.rpiv/artifacts/plans/: 2026-06-08_16-37-26_thttpd-rust-migration.md  2026-06-09_10-08-41_differential-test-fixes.md  2026-06-09_diff-engine-normalization-plan.md  2026-06-12_16-30-00_security-report.md  2026-06-12_16-30-00_strangler-fig-proxy.md  2026-06-12_coverage-gap-implementation.md
.rpiv/artifacts/research/: 2026-06-08_15-27-44_thttpd-rust-migration.md  2026-06-09_01-15-39_thttpd-rs-differential-test-fixes.md
.rpiv/artifacts/reviews/: 2026-06-22_14-46-08_commit-33a63bf.md  2026-06-22_14-48-34_modified.md
.rpiv/artifacts/validation/: 2026-06-08_22-16-19_thttpd-rust-migration.md  2026-06-14_13-54-25_strangler-fig-migration-proxy-thttpd-migrate.md  2026-06-14_14-49-52_strangler-fig-migration-proxy-thttpd-migrate.md  2026-06-21_10-26-29_security-comparison-report-security-ci.md
.rpiv/workflows/: README.md  _shared.ts  feature.ts  phase.ts  ship.ts
config/: thttpd-migrate.example.toml
docs/: ADR-0002-async-runtime-split.md  AI_ASSISTANCE.md  CONTROL_PROTOCOL.md  EXECUTION_PLAN.md  GAP_AUDIT.md  INTERVIEW.md  INTERVIEW_DEMO.md  KNOWN_DEVIATIONS.md  MIGRATION.md  MIGRATION_PLAYBOOK.md  PLAN.md  REFACTOR.md  RELEASING.md  RISKS.md  ROLLBACK.md  SECURITY_NOTES.md  STRANGLER_FIG.md  migration_path.md
docs/security/: COMPARISON.md  CVE_DETAIL.md  CVE_TABLE.md  C_PATTERNS.md  MIGRATION_REPORT.md  RUNNING_LOCALLY.md  RUST_MITIGATIONS.md
harness/: conftest.py  diff_engine.py  test_diff_engine.py
harness/golden/: baseline_report.html
harness/tests/: test_cgi.py  test_connection.py  test_differential.py  test_edge_cases.py  test_errors.py  test_headers.py  test_malformed.py  test_proxy.py  test_static_files.py  test_throttling.py
knowledge/: _architecture.yaml  _index.yaml  _migration_map.yaml
knowledge/modules/: README.md  fdwatch.md  fdwatch.yaml  libhttpd.md  libhttpd.yaml  match.md  match.yaml  mime.md  mime.yaml  mmc.md  mmc.yaml  tdate_parse.md  tdate_parse.yaml  thttpd.md  thttpd.yaml  thttpd_migrate.md  thttpd_migrate.yaml  timers.md  timers.yaml
legacy/extras/: htpasswd.c
pipeline/: analyze_module.py  audit_unsafe.sh  build_legacy.sh  config.h  find_unfixed_cves.sh  generate_report.py  legacy-config.h  refresh_cve_inventory.sh  run_differential.py  run_golden_capture.py  run_security_scan.sh  scan_container.sh  test_tooling.py  validate_knowledge.py
rust/: Cargo.toml  README.md
rust/crates/thttpd-auth/: Cargo.toml  build.rs
rust/crates/thttpd-auth/src/: lib.rs
rust/crates/thttpd-core/: Cargo.toml
rust/crates/thttpd-core/src/: config.rs  connection.rs  eventloop.rs  lib.rs  logging.rs  main.rs  server.rs  signal.rs  startup.rs  throttle.rs
rust/crates/thttpd-fdwatch/: Cargo.toml
rust/crates/thttpd-fdwatch/src/: lib.rs
rust/crates/thttpd-http/: Cargo.toml  build.rs
rust/crates/thttpd-http/src/: auth.rs  cgi.rs  conn.rs  dirlist.rs  error.rs  lib.rs  method.rs  parse.rs  parse_state.rs  response.rs  url.rs
rust/crates/thttpd-match/: Cargo.toml
rust/crates/thttpd-match/src/: lib.rs
rust/crates/thttpd-migrate/: Cargo.toml
rust/crates/thttpd-migrate/src/: backend.rs  circuit.rs  config.rs  control.rs  diff.rs  forwarder.rs  health.rs  lib.rs  main.rs  metrics.rs  router.rs  server.rs  shadow.rs  state.rs  tracing_setup.rs
rust/crates/thttpd-mime/: Cargo.toml
rust/crates/thttpd-mime/src/: lib.rs  types.rs
rust/crates/thttpd-mmc/: Cargo.toml
rust/crates/thttpd-mmc/src/: lib.rs
rust/crates/thttpd-tdate/: Cargo.toml
rust/crates/thttpd-tdate/src/: lib.rs
rust/crates/thttpd-timers/: Cargo.toml
rust/crates/thttpd-timers/src/: lib.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: parse_request.rs  parse_url.rs
scripts/: check_doc_links.py  demo.sh
