[workspace]
resolver = "3"
members = [
    "crates/thttpd-core",
    "crates/thttpd-http",
    "crates/thttpd-fdwatch",
    "crates/thttpd-timers",
    "crates/thttpd-mmc",
    "crates/thttpd-match",
    "crates/thttpd-tdate",
    "crates/thttpd-mime",
    "crates/thttpd-migrate",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
rust-version = "1.85"

[workspace.dependencies]
thttpd-core = { path = "crates/thttpd-core", version = "0.1.0" }
thttpd-http = { path = "crates/thttpd-http", version = "0.1.0" }
thttpd-fdwatch = { path = "crates/thttpd-fdwatch", version = "0.1.0" }
thttpd-timers = { path = "crates/thttpd-timers", version = "0.1.0" }
thttpd-mmc = { path = "crates/thttpd-mmc", version = "0.1.0" }
thttpd-match = { path = "crates/thttpd-match", version = "0.1.0" }
thttpd-tdate = { path = "crates/thttpd-tdate", version = "0.1.0" }
thttpd-mime = { path = "crates/thttpd-mime", version = "0.1.0" }

mio = { version = "1", features = ["os-poll", "os-ext", "net"] }
memmap2 = "0.9"
thiserror = "2"
signal-hook = "0.4"
nix = { version = "0.31", features = ["signal", "process", "fs", "user", "net", "hostname"] }
clap = { version = "4", features = ["derive"] }
slab = "0.4"
tempfile = "3"
libc = "0.2"
base64 = "0.22"
