[package]
name = "thttpd-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Strangler-fig migration proxy for thttpd → thttpd-rs"

[[bin]]
name = "thttpd-migrate"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
clap = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
uuid = { version = "1", features = ["v4"] }
arc-swap = "1"
http-body-util = "0.1"
bytes = "1"
rand = "0.9"
parking_lot = "0.12"
sha2 = "0.11"

[dev-dependencies]
tempfile = { workspace = true }
tokio-stream = "0.1"
metrics-util = { version = "0.20", default-features = false, features = ["debugging"] }
